--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
       {% block content %}
       <h2 class="sub-title">Publications</h2>
-      <ul>
+      <ul class="publications-list">
         <!-- If you are using pagination, section.pages will be empty. You need to use the paginator object -->
         {% for page in section.pages %}
         <li><a href="{{ page.permalink | safe }}">{{ page.title }}</a></li>
