--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,10 +7,10 @@ body {
 }
 
 main {
+  box-sizing: border-box;
   max-width: 66ch;
   margin: 2rem auto 0;
   width: 85%;
-  /* padding: 1rem; */
 }
 
 h1,
@@ -21,10 +21,17 @@ h2 {
 }
 
 p {
-  margin: 0;
+  line-height: 1.15;
+  margin: 0 0 0.5rem;
 }
 
 ul {
+  list-style-type: circle;
+  margin: 0 0 0.5rem;
+  /* padding: 0; */
+}
+
+.publications-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -32,4 +39,8 @@ ul {
 
 .sub-title {
   margin: 2rem 0 0;
+}
+
+.date {
+  margin: 0 0 1rem;
 }
