--- a/templates/publication.html
+++ b/templates/publication.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>{{page.title}}</title>
   </head>
   <body>
-    {% block content %}
-    <h1 class="title">{{ page.title }}</h1>
-    <p class="subtitle"><strong>{{ page.date }}</strong></p>
-    {{ page.content | safe }} {% endblock content %}
+    <main>
+      {% block content %}
+      <h1 class="title">{{ page.title }}</h1>
+      <p class="date">Published: {{ page.date | date(format="%A, %h %Y") }}</p>
+      {{ page.content | safe }} {% endblock content %}
+    </main>
   </body>
 </html>
