--- a/templates/publication.html
+++ b/templates/publication.html
@@ -10,7 +10,7 @@
     <main>
       {% block content %}
       <h1 class="title">{{ page.title }}</h1>
-      <p class="date">Published: {{ page.date | date(format="%A, %h %Y") }}</p>
+      <p class="date">Published: {{ page.date | date(format="%b %d, %Y") }}</p>
       {{ page.content | safe }} {% endblock content %}
     </main>
   </body>
