--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,10 +32,31 @@ ul {
   /* padding: 0; */
 }
 
+code {
+  background-color: #e1e2e6;
+  border-radius: 0.25rem;
+  font-size: 0.9rem;
+}
+
 .publications-list {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.publications-list-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.publications-list-link {
+  color: #19191a;
+  display: block;
+}
+
+.publications-list-date {
+  color: #323233;
+  font-weight: 600;
 }
 
 .sub-title {
@@ -43,5 +64,5 @@ ul {
 }
 
 .date {
-  margin: 0 0 1rem;
+  margin: 0 0 2rem;
 }
