Update commenting system web component.

--- a/templates/publication.html
+++ b/templates/publication.html
@@ -26,9 +26,8 @@
       <!-- commenting system -->
 
       <commenting-system
-        data-comment-system
-        data-comment-system-thread-id=""
-        data-comment-system-api-key="hardcoded_apikey"
+        data-commenting-system-thread-id="{{ page.extra.thread }}"
+        data-commenting-system-public-api-key="{{ config.extra.commenting_system_public_api_key }}"
       >
         <section>
           <p>
