Update commenting system.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,11 @@
         <button type="submit">Subscribe</button>
       </form>
       #} {% block content %}
+      <h2 class="sub-title">Products</h2>
+      <ul>
+        <li><a href="https://commentingsystem.com">Commenting system</a></li>
+      </ul>
+
       <h2 class="sub-title">Publications</h2>
       <ul class="publications-list">
         <!-- If you are using pagination, section.pages will be empty. You need to use the paginator object -->
