--- a/templates/publication.html
+++ b/templates/publication.html
@@ -19,8 +19,7 @@
       self::endpoint(id=page.extra.thread) %}
 
       <!-- query comments belonging to the provided thread -->
-      {% set comments = load_data(url=url, format="json",
-      headers=["origin=https://eduardouribe.com"]) %} {% endif %} {% if
+      {% set comments = load_data(url=url, format="json") %} {% endif %} {% if
       page.extra.thread %}
 
       <!-- commenting system -->
@@ -80,5 +79,5 @@
 {% endfor %} {% endmacro thread %}
 
 <!-- macro that creates the dynamic endpoint -->
-{% macro endpoint(id) %} https://commentingsystem.com/api/v1/thread/{{id}} {%
-endmacro input %}
+{% macro endpoint(id) %} http://localhost:3000/api/v1/thread/{{id}} {% endmacro
+input %}
