Removed extra characters from endpoint.

--- a/templates/publication.html
+++ b/templates/publication.html
@@ -80,5 +80,5 @@
 {% endfor %} {% endmacro thread %}
 
 <!-- macro that creates the dynamic endpoint -->
-{% macro endpoint(id) %} https://commentingsystem.com:3000/api/v1/thread/{{id}}
-{% endmacro input %}
+{% macro endpoint(id) %} https://commentingsystem.com/api/v1/thread/{{id}} {%
+endmacro input %}
