--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 main {
@@ -27,9 +27,17 @@ p {
 }
 
 ul {
-  list-style-type: circle;
-  margin: 0 0 0.5rem;
-  /* padding: 0; */
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    line-height: 1.5;
+
+    /* a {
+      color: #d34516;
+    } */
+  }
 }
 
 code {
@@ -55,14 +63,9 @@ pre {
   padding: 0;
 }
 
-.publications-list-link {
-  color: #19191a;
-  display: block;
-}
-
 .publications-list-date {
-  color: #323233;
-  /* font-weight: 600; */
+  color: #d34516;
+  font-family: monospace;
 }
 
 .sub-title {
@@ -77,37 +80,6 @@ pre {
   color: #a4a5a6;
   font-size: 0.9rem;
   margin: 0 0 2rem;
-}
-
-.newsletter-label {
-  margin-top: 2rem;
-}
-
-.newsletter-form {
-  border: 1px solid #e1e2e6;
-  border-radius: 0.25rem;
-  display: flex;
-  height: 2.5rem;
-  justify-content: space-between;
-  padding: 0.25rem;
-}
-
-.newsletter-form input {
-  border: none;
-  display: block;
-  font-size: 0.9rem;
-  width: 78%;
-  text-indent: 0.25rem;
-}
-
-.newsletter-form button {
-  border: none;
-  background: #b7410e;
-  border-radius: 0.2rem;
-  color: #fef2ee;
-  display: block;
-  font-size: 0.9rem;
-  width: 20%;
 }
 
 @media screen and (min-width: 600px) {
