--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   <body>
     <main>
       <h1>Eduardo Javier Uribe Cruz</h1>
-      <p><i>Software Engineer Specializing in Rust Backends</i></p>
+      <p>Rust Backend Engineer <i>Specializing in Rocket.rs</i></p>
 
       {% block content %}
       <h2 class="sub-title">Products</h2>
